--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,31 @@
-.header {
-  max-height: 500px;
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: black;
+  font-weight: 200px;
+}
+
+img.header {
+  max-height: 350px;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+
+.headerContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.homeSection {
+  background-color: white;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
