--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -58,3 +58,32 @@ img.header {
     }
   }
 }
+
+.episodesContainer {
+  display: flex;
+  overflow-x: scroll;
+  width: 100%;
+  margin-top: 20px;
+  .card {
+    display: flex;
+    justify-items: center;
+    flex-shrink: 0;
+    max-width: 600px;
+    border: none;
+    max-height: 600px;
+    opacity: 0.9;
+    margin: 40px 20px 20px 20px;
+    background-size: cover;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-position: center;
+    &:hover {
+      opacity: 1;
+    }
+    img {
+      max-width: 600px;
+      border: solid 5px none;
+      border-radius: 5px;
+    }
+  }
+}
