--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -59,6 +59,15 @@ img.header {
   }
 }
 
+.episodesSection {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .episodesContainer {
   display: flex;
   overflow-x: scroll;
@@ -66,7 +75,8 @@ img.header {
   margin-top: 20px;
   .card {
     display: flex;
-    justify-items: center;
+    flex-direction: column;
+    align-items: center;
     flex-shrink: 0;
     max-width: 600px;
     border: none;
@@ -81,7 +91,10 @@ img.header {
       opacity: 1;
     }
     img {
-      max-width: 600px;
+      height: auto;
+      max-height: 400px;
+      width: auto;
+      max-width: 400px;
       border: solid 5px none;
       border-radius: 5px;
     }
