--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -57,6 +57,15 @@ img.header {
       font-weight: 200px;
     }
   }
+  .directories {
+    display: flex;
+    align-items: center;
+    .directoryIcon {
+      padding: 5px;
+      height: 35px;
+      width: 35px;
+    }
+  }
 }
 
 .episodesSection {
@@ -97,6 +106,11 @@ img.header {
       max-width: 400px;
       border: solid 5px none;
       border-radius: 5px;
+    }
+    .episodeIcon {
+      padding: 5px;
+      height: 35px;
+      width: 35px;
     }
   }
 }
