--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -135,10 +135,11 @@ img.header {
     .epImage {
       text-align: justify;
       text-justify: inter-word;
-      font-size: 22px;
+      font-size: 25px;
       margin: 20px;
       padding: 0;
-      max-width: 500px;
+      max-width: 30%;
+      max-height: auto;
       box-sizing: border-box;
       color: black;
       font-weight: 200px;
