--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -8,6 +8,10 @@ ul {
 }
 
 .navbar {
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+  display: flex;
   background: white;
   color: white; 
   text-align: center;
@@ -15,14 +19,33 @@ ul {
   border-bottom: 1px solid black;
 }
 
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + .content {
+  padding-top: 60px;
+}
+
 .navbar ul li {
   display: inline-block;
   position: relative;
   min-width: 150px;  
+  font-size: 30px;
+  width: 20%;
+  padding-bottom: 10px;
+  .logoPic {
+    max-width: 50%;
+    padding-top: 20px;
+  }
 }
 
 .navbar ul li a  {
   min-width: 150px;  
+  font-size: 25px;
+  width: 100%;
   display: inline-block;
   color: black;
   text-decoration: none;
