--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,6 +34,18 @@ img.header {
   }
 }
 
+.collapse {
+  text-align: justify;
+  text-justify: inter-word;
+  font-size: 25px;
+  margin: 20px;
+  padding: 0;
+  max-width: 500px;
+  box-sizing: border-box;
+  color: black;
+  font-weight: 200px;
+}
+
 .aboutSection {
   height: 100vh;
   width: 100vw;
